Revert "first migration"
This reverts commit 775e03bb305d65b6b8936209cd0546fb83caa24b.

--- a/RNews/appsettings.json
+++ b/RNews/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "RNewsDatabase": "Server=(localdb)\\mssqllocaldb;Database=rnewsdb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "RNewsDatabase": "Server=(localdb)\\mssqllocaldb;Database=rnews;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
