register user work

--- a/RNews/appsettings.json
+++ b/RNews/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "RNewsDatabase": "Server=(localdb)\\mssqllocaldb;Database=rnews;Trusted_Connection=True;"
+    "RNewsDatabase": "Server=(localdb)\\mssqllocaldb;Database=rnews;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
